--- a/src/app/user/components/events/events.component.html
+++ b/src/app/user/components/events/events.component.html
@@ -6,6 +6,34 @@
             <h2>Event Speakers</h2>
             <p>Here are some of our speakers</p>
           </div>
+          <div>
+            <label for="cars">Choose a Categories:</label>
+
+<select name="cars" id="cars">
+  <option value="volvo">Comedy</option>
+  <option value="saab">Comedy</option>
+  <option value="mercedes">Comedy</option>
+  <option value="audi">Comedy</option>
+</select>
+
+<label for="cars">Choose a Categories:</label>
+
+<select name="cars" id="cars">
+  <option value="volvo">Comedy</option>
+  <option value="saab">Comedy</option>
+  <option value="mercedes">Comedy</option>
+  <option value="audi">Comedy</option>
+</select>
+
+<label for="cars">Choose a location:</label>
+
+<select name="cars" id="cars">
+  <option value="volvo">Comedy</option>
+  <option value="saab">Comedy</option>
+  <option value="mercedes">Comedy</option>
+  <option value="audi">Comedy</option>
+</select>
+          </div>
   
           <div class="row">
             <div class="col-lg-4 col-md-6">
