--- a/src/app/user/components/events/events.component.html
+++ b/src/app/user/components/events/events.component.html
@@ -1,63 +1,51 @@
-
+<div class="row g-0"id="e">
+  <div class="col-3">
+    <app-side-filter></app-side-filter>
+  </div>
     <!-- ======= Speakers Section ======= -->
+   <div class="col-9 pt-5">
     <section id="speakers">
-        <div class="container" data-aos="fade-up">
-          <div class="section-header">
-            <h2>Event Speakers</h2>
-            <p>Here are some of our speakers</p>
-          </div>
-          <div>
-            <label for="cars">Choose a Categories:</label>
+      <div class="container" data-aos="fade-up">
+        <div class="section-header">
+          <h2>Event Speakers</h2>
+          <p>Here are some of our speakers</p>
+        </div>
+        <!-- <div>
+          <label for="cars">Choose a Categories:</label>
 
 <select name="cars" id="cars">
-  <option value="volvo">Comedy</option>
-  <option value="saab">Comedy</option>
-  <option value="mercedes">Comedy</option>
-  <option value="audi">Comedy</option>
+<option value="volvo">Comedy</option>
+<option value="saab">Comedy</option>
+<option value="mercedes">Comedy</option>
+<option value="audi">Comedy</option>
 </select>
 
 <label for="cars">Choose a Categories:</label>
 
 <select name="cars" id="cars">
-  <option value="volvo">Comedy</option>
-  <option value="saab">Comedy</option>
-  <option value="mercedes">Comedy</option>
-  <option value="audi">Comedy</option>
+<option value="volvo">Comedy</option>
+<option value="saab">Comedy</option>
+<option value="mercedes">Comedy</option>
+<option value="audi">Comedy</option>
 </select>
 
 <label for="cars">Choose a location:</label>
 
 <select name="cars" id="cars">
-  <option value="volvo">Comedy</option>
-  <option value="saab">Comedy</option>
-  <option value="mercedes">Comedy</option>
-  <option value="audi">Comedy</option>
+<option value="volvo">Comedy</option>
+<option value="saab">Comedy</option>
+<option value="mercedes">Comedy</option>
+<option value="audi">Comedy</option>
 </select>
-          </div>
-  
-          <div class="row">
-            <div class="col-lg-4 col-md-6">
-              <div class="speaker" data-aos="fade-up" data-aos-delay="100">
-               <a routerLink="/events-detail" routerLinkActive="current"> <img src="assets/img/speakers/1.jpg" alt="Speaker 1" class="img-fluid"></a>
-                  <div class="details">
-                    <h3>Brenden Legros</h3>
-                    <p>Quas alias incidunt</p>
-                    <div class="social">
-                      <a href=""><i class="bi bi-twitter"></i></a>
-                      <a href=""><i class="bi bi-facebook"></i></a>
-                      <a href=""><i class="bi bi-instagram"></i></a>
-                      <a href=""><i class="bi bi-linkedin"></i></a>
-                    </div>
-                  </div>
+        </div> -->
 
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-6">
-              <div class="speaker" data-aos="fade-up" data-aos-delay="200">
-                <a routerLink="/events-detail" routerLinkActive="current"> <img src="assets/img/speakers/2.jpg" alt="Speaker 2" class="img-fluid"></a>
+        <div class="row">
+          <div class="col-lg-4 col-md-6">
+            <div class="speaker" data-aos="fade-up" data-aos-delay="100">
+             <a routerLink="/events-detail" routerLinkActive="current"> <img src="assets/img/speakers/1.jpg" alt="Speaker 1" class="img-fluid"></a>
                 <div class="details">
-                  <h3><a href="speaker-details.html">Hubert Hirthe</a></h3>
-                  <p>Consequuntur odio aut</p>
+                  <h3>Brenden Legros</h3>
+                  <p>Quas alias incidunt</p>
                   <div class="social">
                     <a href=""><i class="bi bi-twitter"></i></a>
                     <a href=""><i class="bi bi-facebook"></i></a>
@@ -65,69 +53,87 @@
                     <a href=""><i class="bi bi-linkedin"></i></a>
                   </div>
                 </div>
-              </div>
+
             </div>
-            <div class="col-lg-4 col-md-6">
-              <div class="speaker" data-aos="fade-up" data-aos-delay="300">
-                <a routerLink="/events-detail" routerLinkActive="current"> <img src="assets/img/speakers/3.jpg" alt="Speaker 3" class="img-fluid"></a>
-                <div class="details">
-                  <h3><a href="speaker-details.html">Cole Emmerich</a></h3>
-                  <p>Fugiat laborum et</p>
-                  <div class="social">
-                    <a href=""><i class="bi bi-twitter"></i></a>
-                    <a href=""><i class="bi bi-facebook"></i></a>
-                    <a href=""><i class="bi bi-instagram"></i></a>
-                    <a href=""><i class="bi bi-linkedin"></i></a>
-                  </div>
+          </div>
+          <div class="col-lg-4 col-md-6">
+            <div class="speaker" data-aos="fade-up" data-aos-delay="200">
+              <a routerLink="/events-detail" routerLinkActive="current"> <img src="assets/img/speakers/2.jpg" alt="Speaker 2" class="img-fluid"></a>
+              <div class="details">
+                <h3><a href="speaker-details.html">Hubert Hirthe</a></h3>
+                <p>Consequuntur odio aut</p>
+                <div class="social">
+                  <a href=""><i class="bi bi-twitter"></i></a>
+                  <a href=""><i class="bi bi-facebook"></i></a>
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
             </div>
-            <div class="col-lg-4 col-md-6">
-              <div class="speaker" data-aos="fade-up" data-aos-delay="100">
-                <a routerLink="/events-detail" routerLinkActive="current"> <img src="assets/img/speakers/4.jpg" alt="Speaker 4" class="img-fluid"></a>
-                <div class="details">
-                  <h3><a href="speaker-details.html">Jack Christiansen</a></h3>
-                  <p>Debitis iure vero</p>
-                  <div class="social">
-                    <a href=""><i class="bi bi-twitter"></i></a>
-                    <a href=""><i class="bi bi-facebook"></i></a>
-                    <a href=""><i class="bi bi-instagram"></i></a>
-                    <a href=""><i class="bi bi-linkedin"></i></a>
-                  </div>
+          </div>
+          <div class="col-lg-4 col-md-6">
+            <div class="speaker" data-aos="fade-up" data-aos-delay="300">
+              <a routerLink="/events-detail" routerLinkActive="current"> <img src="assets/img/speakers/3.jpg" alt="Speaker 3" class="img-fluid"></a>
+              <div class="details">
+                <h3><a href="speaker-details.html">Cole Emmerich</a></h3>
+                <p>Fugiat laborum et</p>
+                <div class="social">
+                  <a href=""><i class="bi bi-twitter"></i></a>
+                  <a href=""><i class="bi bi-facebook"></i></a>
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
             </div>
-            <div class="col-lg-4 col-md-6">
-              <div class="speaker" data-aos="fade-up" data-aos-delay="200">
-                <img src="assets/img/speakers/5.jpg" alt="Speaker 5" class="img-fluid">
-                <div class="details">
-                  <h3><a href="speaker-details.html">Alejandrin Littel</a></h3>
-                  <p>Qui molestiae natus</p>
-                  <div class="social">
-                    <a href=""><i class="bi bi-twitter"></i></a>
-                    <a href=""><i class="bi bi-facebook"></i></a>
-                    <a href=""><i class="bi bi-instagram"></i></a>
-                    <a href=""><i class="bi bi-linkedin"></i></a>
-                  </div>
+          </div>
+          <div class="col-lg-4 col-md-6">
+            <div class="speaker" data-aos="fade-up" data-aos-delay="100">
+              <a routerLink="/events-detail" routerLinkActive="current"> <img src="assets/img/speakers/4.jpg" alt="Speaker 4" class="img-fluid"></a>
+              <div class="details">
+                <h3><a href="speaker-details.html">Jack Christiansen</a></h3>
+                <p>Debitis iure vero</p>
+                <div class="social">
+                  <a href=""><i class="bi bi-twitter"></i></a>
+                  <a href=""><i class="bi bi-facebook"></i></a>
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
             </div>
-            <div class="col-lg-4 col-md-6">
-              <div class="speaker" data-aos="fade-up" data-aos-delay="300">
-                <img src="assets/img/speakers/6.jpg" alt="Speaker 6" class="img-fluid">
-                <div class="details">
-                  <h3><a href="speaker-details.html">Willow Trantow</a></h3>
-                  <p>Non autem dicta</p>
-                  <div class="social">
-                    <a href=""><i class="bi bi-twitter"></i></a>
-                    <a href=""><i class="bi bi-facebook"></i></a>
-                    <a href=""><i class="bi bi-instagram"></i></a>
-                    <a href=""><i class="bi bi-linkedin"></i></a>
-                  </div>
+          </div>
+          <div class="col-lg-4 col-md-6">
+            <div class="speaker" data-aos="fade-up" data-aos-delay="200">
+              <img src="assets/img/speakers/5.jpg" alt="Speaker 5" class="img-fluid">
+              <div class="details">
+                <h3><a href="speaker-details.html">Alejandrin Littel</a></h3>
+                <p>Qui molestiae natus</p>
+                <div class="social">
+                  <a href=""><i class="bi bi-twitter"></i></a>
+                  <a href=""><i class="bi bi-facebook"></i></a>
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6">
+            <div class="speaker" data-aos="fade-up" data-aos-delay="300">
+              <img src="assets/img/speakers/6.jpg" alt="Speaker 6" class="img-fluid">
+              <div class="details">
+                <h3><a href="speaker-details.html">Willow Trantow</a></h3>
+                <p>Non autem dicta</p>
+                <div class="social">
+                  <a href=""><i class="bi bi-twitter"></i></a>
+                  <a href=""><i class="bi bi-facebook"></i></a>
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
             </div>
           </div>
         </div>
-  
-      </section><!-- End Speakers Section -->
+      </div>
+
+    </section>
+   </div><!-- End Speakers Section -->
+      </div>
