--- a/src/app/user/components/events/events.component.html
+++ b/src/app/user/components/events/events.component.html
@@ -7,7 +7,8 @@
     <section id="speakers">
       <div class="container" data-aos="fade-up">
         <div class="section-header">
-          <h2>Event Speakers</h2>
+          <app-list-your-shows></app-list-your-shows>
+          <h2 >Event Speakers</h2>
           <p>Here are some of our speakers</p>
         </div>
         <!-- <div>
