--- a/src/app/authentication/components/signup/signup.component.html
+++ b/src/app/authentication/components/signup/signup.component.html
@@ -18,8 +18,8 @@
                 <div class="login">
                   <h2>SIGN UP</h2>
                   <div class="inputbox">
-                    <input type="text" name="username" placeholder="  USERNAME" formControlName="username">
-                    <span style="color:red" *ngIf="username && username.invalid && username.touched">*invalid*</span>
+                    <input type="text" name="name" placeholder="  USERNAME" formControlName="name">
+                    <span style="color:red" *ngIf="name && name.invalid && name.touched">*invalid*</span>
                     <input type="text" name="email" placeholder="  EMAIL" formControlName="email">
                     <span style="color:red" *ngIf="email && email.invalid && email.touched">*invalid*</span>
                     <input type="password" name="password" placeholder="  PASSWORD" formControlName="password">
