--- a/src/app/authentication/components/login/login.component.html
+++ b/src/app/authentication/components/login/login.component.html
@@ -24,8 +24,8 @@
             <div class="login">
               <h2>LOG IN</h2>
               <div class="inputbox">
-                <input type="text" name="email" placeholder="  EMAIL" formControlName="email">
-                <span style="color:red" *ngIf="email && email.invalid && email.touched">*invalid*</span>
+                <input type="text" name="names" placeholder="Name" formControlName="name">
+                <span style="color:red" *ngIf="name && name.invalid && name.touched">*invalid*</span>
                 <input type="password" name="password" placeholder="  PASSWORD" formControlName="password">
                 <span style="color:red" *ngIf="password && password.invalid && password.touched">*invalid*</span>
               </div>
