--- a/src/app/user/components/events/events.component.html
+++ b/src/app/user/components/events/events.component.html
@@ -1,10 +1,11 @@
 <div class="row g-0"id="e">
   <div class="col-3">
     <app-side-filter></app-side-filter>
-  </div>
+  </div>   
     <!-- ======= Speakers Section ======= -->
    <div class="col-9 pt-5">
     <section id="speakers">
+      <!-- <input class="form-control" type="text" name="search" [(ngModel)]="Comedy" autocomplete="off" placeholder="&#61442;  search for events"> -->
       <div class="container" data-aos="fade-up">
         <div class="section-header">
           <app-list-your-shows></app-list-your-shows>
@@ -40,13 +41,13 @@
 </select>
         </div> -->
 
-        <div class="row">
-          <div class="col-lg-4 col-md-6">
+        <div class="row" >
+          <div class="col-lg-4 col-md-6" *ngFor="let item of data2 | filter:Comedy">
             <div class="speaker" data-aos="fade-up" data-aos-delay="100">
-             <a routerLink="/events-detail" routerLinkActive="current"> <img src="assets/img/speakers/1.jpg" alt="Speaker 1" class="img-fluid"></a>
+             <a (click)="navigate(item)" routerLinkActive="current"> <img src="assets/img/speakers/1.jpg" alt="Speaker 1" class="img-fluid"></a>
                 <div class="details">
-                  <h3>Brenden Legros</h3>
-                  <p>Quas alias incidunt</p>
+                  <h3>{{item.eventname}}</h3>
+                  <p>{{item.prices}}</p>
                   <div class="social">
                     <a href=""><i class="bi bi-twitter"></i></a>
                     <a href=""><i class="bi bi-facebook"></i></a>
